[gd_scene load_steps=12 format=3 uid="uid://cnqxl80su0co4"]

[ext_resource type="Script" uid="uid://cmcyjojsvvnxw" path="res://scenes/bee_colony.gd" id="1_mcgfy"]
[ext_resource type="Texture2D" uid="uid://d2chyn8tlqyat" path="res://assets/beehive.png" id="2_c2ynb"]
[ext_resource type="Texture2D" uid="uid://dogtp5dbjim3t" path="res://assets/gui/button_1.png" id="3_js7wk"]
[ext_resource type="Texture2D" uid="uid://vfm1p832dp0b" path="res://assets/gui/button_1_hover.png" id="4_64qp5"]
[ext_resource type="LabelSettings" uid="uid://cn1rdmmbnmsu3" path="res://assets/gui/button_font.tres" id="5_flwcb"]
[ext_resource type="Texture2D" uid="uid://da6cpijlphj45" path="res://assets/gui/panel_bg.png" id="6_64qp5"]
[ext_resource type="FontFile" uid="uid://b7vkyxnsa7dol" path="res://assets/fonts/Sunset Friday.otf" id="7_flwcb"]
[ext_resource type="PackedScene" uid="uid://bdc0ihum5w7nc" path="res://scenes/gui/jar_for_info_panel_gui.tscn" id="8_713g0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dwbse"]
radius = 142.59383

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aqk2v"]
radius = 483.0
height = 1328.0

[sub_resource type="LabelSettings" id="LabelSettings_713g0"]
font = ExtResource("7_flwcb")
font_size = 60
font_color = Color(0.84, 0, 0, 1)
stacked_outline_count = 1
stacked_outline_0/size = 8

[node name="BeeColony" type="StaticBody2D" groups=["bee_colony"]]
input_pickable = true
script = ExtResource("1_mcgfy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_c2ynb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 21)
shape = SubResource("CircleShape2D_dwbse")

[node name="InteractiveArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveArea2D"]
position = Vector2(-9.999992, 14)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_aqk2v")

[node name="ActionButton" type="TextureButton" parent="."]
z_index = 100
offset_left = -359.0
offset_top = -419.99994
offset_right = 113.0
offset_bottom = -227.99995
scale = Vector2(1.4800011, 1.4800011)
texture_normal = ExtResource("3_js7wk")
texture_hover = ExtResource("4_64qp5")

[node name="Label" type="Label" parent="ActionButton"]
z_index = 101
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.5
offset_top = -29.0
offset_right = 155.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
text = "Harvest Honey"
label_settings = ExtResource("5_flwcb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoPanel" type="TextureRect" parent="."]
z_index = 100
offset_left = 167.0
offset_top = -201.0
offset_right = 746.0
offset_bottom = 324.0
texture = ExtResource("6_64qp5")

[node name="HeaderLabel" type="Label" parent="InfoPanel"]
z_index = 101
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -222.5
offset_right = 156.5
offset_bottom = -164.5
grow_horizontal = 2
grow_vertical = 2
text = "Bee Hive Stats"
label_settings = ExtResource("5_flwcb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PopulationLabel" type="Label" parent="InfoPanel"]
z_index = 101
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.5
offset_top = -147.5
offset_right = 166.5
offset_bottom = -89.5
grow_horizontal = 2
grow_vertical = 2
text = "Population: 80,000"
label_settings = ExtResource("5_flwcb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StarvingLabel" type="Label" parent="InfoPanel"]
visible = false
z_index = 101
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -309.5
offset_top = 32.5
offset_right = 304.5
offset_bottom = 181.5
grow_horizontal = 2
grow_vertical = 2
text = "Starving! 
Lack of raw honey"
label_settings = SubResource("LabelSettings_713g0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 0
offset_left = 71.0
offset_top = 186.0
offset_right = 507.0
offset_bottom = 499.0
theme_override_constants/separation = 11

[node name="TopHBoxContainer" type="HBoxContainer" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 26

[node name="Jar1TextureProgressBar" parent="InfoPanel/VBoxContainer/TopHBoxContainer" instance=ExtResource("8_713g0")]
unique_name_in_owner = true
layout_mode = 2

[node name="Jar2TextureProgressBar" parent="InfoPanel/VBoxContainer/TopHBoxContainer" instance=ExtResource("8_713g0")]
unique_name_in_owner = true
layout_mode = 2

[node name="Jar3TextureProgressBar" parent="InfoPanel/VBoxContainer/TopHBoxContainer" instance=ExtResource("8_713g0")]
unique_name_in_owner = true
layout_mode = 2

[node name="BottomHBoxContainer" type="HBoxContainer" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 26

[node name="Jar4TextureProgressBar" parent="InfoPanel/VBoxContainer/BottomHBoxContainer" instance=ExtResource("8_713g0")]
unique_name_in_owner = true
layout_mode = 2

[node name="Jar5TextureProgressBar" parent="InfoPanel/VBoxContainer/BottomHBoxContainer" instance=ExtResource("8_713g0")]
unique_name_in_owner = true
layout_mode = 2

[node name="Jar6TextureProgressBar" parent="InfoPanel/VBoxContainer/BottomHBoxContainer" instance=ExtResource("8_713g0")]
unique_name_in_owner = true
layout_mode = 2

[node name="ExitHiveMarker2D" type="Marker2D" parent="."]
position = Vector2(2, 109)

[node name="HoneyProductionTimer" type="Timer" parent="."]
autostart = true

[node name="HiveUpkeepTimer" type="Timer" parent="."]
autostart = true

[node name="BeeSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="DebugRichTextLabel" type="RichTextLabel" parent="."]
offset_left = -555.0
offset_top = -136.0
offset_right = 147.0
offset_bottom = 65.0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 48
text = "a
b
c
"
fit_content = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="InteractiveArea2D" to="." method="_on_interactive_area_2d_body_entered"]
[connection signal="body_exited" from="InteractiveArea2D" to="." method="_on_interactive_area_2d_body_exited"]
[connection signal="pressed" from="ActionButton" to="." method="_on_action_button_pressed"]
[connection signal="timeout" from="HoneyProductionTimer" to="." method="_on_honey_production_timer_timeout"]
[connection signal="timeout" from="HiveUpkeepTimer" to="." method="_on_hive_upkeep_timer_timeout"]
[connection signal="timeout" from="BeeSpawnTimer" to="." method="_on_bee_spawn_timer_timeout"]
